--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Document</title>
 </head>
 <body style="margin: 0px; overflow: hidden;">
+  <p>poraaa</p>
   <a-scene embedded arjs='sourceType: webcam;' allow="geolocation; microphone; camera">
     <a-marker preset="hiro">
       <a-box position="0 0.5 0" material="color: red;">
