--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body style="margin: 0px; overflow: hidden;">
   <p>poraaa</p>
-  <a-scene embedded arjs='sourceType: webcam;' allow="geolocation; microphone; camera">
+  <a-scene embedded arjs>
     <a-marker preset="hiro">
-      <a-box position="0 0.5 0" material="color: red;">
+      <a-box position="0 0.3 0" material="color: blue;">
         <a-animation attribute="rotation"
           dur="3000"
           to="360 360 0"
