--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Document</title>
 </head>
 <body style="margin: 0px; overflow: hidden;">
-  <a-scene embedded arjs>
+  <a-scene embedded arjs allow="geolocation; microphone; camera">
     <a-marker preset="hiro">
       <a-box position="0 1.0 0" material="color: blue;">
         <a-animation attribute="rotation"
