--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <title>Document</title>
 </head>
 <body style="margin: 0px; overflow: hidden;">
-  <a-scene embedded arjs allow="geolocation; microphone; camera">
+  <a-scene embedded arjs>
     <a-marker preset="hiro">
-      <a-box position="0 1.5 0" material="color: blue;">
-        <a-animation attribute="rotation"
+      <a-box position="0 1.0 0" material="color: blue;">
+        <!--<a-animation attribute="rotation"
           dur="3000"
           to="360 360 0"
           repeat="indefinite"
           easing="linear"
-        >
+        >-->
         </a-animation>
       </a-box>
     </a-marker>
