--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="margin: 0px; overflow: hidden;">
   <a-scene embedded arjs>
     <a-marker preset="hiro">
-      <a-box position="0 1.0 0" material="color: blue;">
+      <a-box position="1 1 0" material="color: yellow;">
         <!--<a-animation attribute="rotation"
           dur="3000"
           to="360 360 0"
