--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body style="margin: 0px; overflow: hidden;">
   <a-scene embedded arjs>
     <a-marker preset="hiro">
-      <a-box position="1 1 0" material="color: yellow;">
-        <!--<a-animation attribute="rotation"
+      <a-box position="0.5 0.5 0" material="color: yellow;">
+        <a-animation attribute="rotation"
           dur="3000"
           to="360 360 0"
           repeat="indefinite"
           easing="linear"
-        >-->
+        >
         </a-animation>
       </a-box>
     </a-marker>
