--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Document</title>
 </head>
 <body style="margin: 0px; overflow: hidden;">
-  <a-scene embedded arjs>
+  <a-scene embedded arjs="sourceType: webcam">
     <a-marker preset="hiro">
       <a-box position="0 1 0 0" scale="0.5 0.5 0.5" material="color: #FF00FF;">
         <a-animation attribute="rotation"
