--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="margin: 0px; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam">
     <a-marker preset="hiro">
-      <a-box position="0 0.5 0" scale="1 1 1" material="color: #FF00FF; opacity: 0.5">
+      <a-box position="0 0.5 0" material="color: #008080; opacity: 0.80">
         <a-animation attribute="rotation"
           dur="3000"
           to="360 360 0"
