--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body style="margin: 0px; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam">
     <a-marker preset="hiro">
-      <a-cylinder position="0 0.5 0" material="color: #008080;">
+      <a-box position="0 0.5 0" material="color: #008080;">
         <a-animation attribute="rotation"
           dur="3000"
-          to="360 360 0"
+          to="360 360 360"
           repeat="indefinite"
           easing="linear"
         >
         </a-animation>
-      </a-cylinder>
+      </a-box>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
