--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <a-box position="0 0.5 0" material="color: #008080;">
         <a-animation attribute="rotation"
           dur="3000"
-          to="360 360 360"
-          repeat="indefinite"
+          to="0 360 0"
+          loop="true"
           easing="linear"
         >
         </a-animation>
